fix font size for mobile and align contact info

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -120,6 +120,16 @@
 			margin-bottom: 1rem;
 			font-size: 4rem;
 		}
+
+		.sm-heading {
+			font-size: 1rem;
+		}
+
+		.bio {
+			p {
+				font-size: 1rem;
+			}
+		}
 	}
 
 	main#home h1 {
