--- a/scss/main.scss
+++ b/scss/main.scss
@@ -234,6 +234,9 @@ ul {
 	.alert {
 		text-align: left;
 	}
+	.info {
+		text-align: left;
+	}
 }
 
 .wrapper > * {
